Service sayfalarÄ±nda transparent header ve beyaz menÃ¼ eklendi

--- a/public/assets/scss/layout/header/_header-11.scss
+++ b/public/assets/scss/layout/header/_header-11.scss
@@ -39,7 +39,7 @@
                         padding: 45px 0px;
                         display: inline-block;
                         text-transform: uppercase;
-                        color: var(--tp-common-white);
+                        color: var(--tp-common-white-solid);
                         font-family: var(--tp-ff-syne);
                     }
                 }
